fix: footer top wrapper dinamic gap

--- a/moscow/src/assets/styles/components/footer.css
+++ b/moscow/src/assets/styles/components/footer.css
@@ -29,11 +29,28 @@
 }
 
 .footer-top-wrapper {
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
-    gap: 3.5rem;
+
+    width: 100%;
+}
+
+.footer-top-wrapper > section {
+    flex-grow: 1;
+    flex-basis: 0;
+
+    margin: 0 1rem;
+}
+
+.footer-top-wrapper > section:first-child {
+    margin-left: 0;
+}
+
+.footer-top-wrapper > section:last-child {
+    margin-right: 0;
 }
 
 .contacts h3,
